--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.8.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
